[package]
name = "via_btc_sender"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true
# TODO: add to main Cargo.toml
bitcoincore-rpc = "0.19.0"
